--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 .main_wrapper{
     display: flex;
     flex-wrap: wrap;
-    width: 1000px;
+    width: 1300px;
     margin: 0 auto;
 }
 .box1{
-    width: 300px;
-    height: 100px;
+    width:300px;
+    padding: 50px;
     background-color:chocolate;
     border-radius: 15px;
 }
 .box2{
     width: 300px;
-    height: 100px;
+    padding: 50px;
     background-color:blueviolet;
     border-radius: 15px;
     margin: 0px 5px 0px 5px;
 }
 .box3{
     width: 300px;
-    height: 100px;
+    padding: 50px;
     background-color:chartreuse;
     border-radius: 15px;
 }
